test/tests/stages/16_characters_and_strings/invalid_types/string_initializer_too_long_nested_static.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[25]:
  char
  identifier(array)
  [
  const int(3)
  ]
  [
  const int(3)
  ]
  =
  {
  string literal("a")
  ,
  string literal("bcde")
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
